# odds-portal-scraper

./: odds_info.csv  odds_info1000.csv  odds_info1000_10000.csv  odds_infoTEST.csv  pyproject.toml
betexplorer_scraper/: events_urls_parser.py
betexplorer_scraper/urls/: champ_by_years.txt  championate_urls.txt  failed_champ_urls.txt
odds_portal_scraper/: driver.py  events_urls_parser.py  odds_parser.py
odds_portal_scraper/betexplorer_scraper/: events_urls_parser.py  normalize_urls.py  odds_parser.py
odds_portal_scraper/betexplorer_scraper/urls/: champ_urls_prepared.txt  failed_old_urls.txt  main_failed.txt  other_champ_urls.txt  renamed_failed.txt
odds_portal_scraper/logs/: loggers.py  odds_failed_urls.txt  settings.py
odds_portal_scraper/odds_portal/: odds_parser.py
odds_portal_scraper/odds_portal/urls/: champ_urls.txt  events_urls1.txt  events_urls10.txt  events_urls12.txt  events_urls2.txt  events_urls5.txt  events_urls7.txt  events_urls9.txt  failed_old_urls.txt  failed_urls.txt  no_data_urls.txt  old_urls.txt
odds_portal_scraper/urls/: champ_urls_by_years.txt  events_urls11.txt  events_urls13.txt  events_urls3.txt  events_urls4.txt  events_urls6.txt  events_urls8.txt
tests/: test_odds_portal_scraper.py
