[tool.poetry]
name = "odds-portal-scraper"
version = "0.1.0"
description = ""
authors = ["Max <maksim.perepelyuk@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
